--- a/RetrofitKotlin/app/build.gradle
+++ b/RetrofitKotlin/app/build.gradle
@@ -1,21 +1,13 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
 
 apply plugin: 'kotlin-android-extensions'
-
-//androidExtensions {
-//    experimental = true
-//}
-//androidExtensions {
-//    defaultCacheImplementation = "HASH_MAP" // also SPARSE_ARRAY, NONE
-//}
 
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.darhometask2roomdatabase"
+        applicationId "com.example.retrofitkotlin"
         minSdkVersion 22
         targetSdkVersion 28
         versionCode 1
@@ -33,15 +25,18 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+
     testImplementation 'junit:junit:4.12'
-
-    implementation 'androidx.room:room-runtime:2.0.0'
-    kapt 'androidx.room:room-compiler:2.0.0'
-
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
